# go/as/external/api/frameLog.pb.go
@@ -9,7 +9,7 @@ import (
 	gw "github.com/brocaar/chirpstack-api/go/v3/gw"
 	proto "github.com/golang/protobuf/proto"
 	_ "github.com/golang/protobuf/ptypes/duration"
-	_ "github.com/golang/protobuf/ptypes/timestamp"
+	timestamp "github.com/golang/protobuf/ptypes/timestamp"
 	math "math"
 )
 
@@ -55,10 +55,12 @@ type UplinkFrameLog struct {
 	// RX information of the uplink.
 	RxInfo []*gw.UplinkRXInfo `protobuf:"bytes,2,rep,name=rx_info,json=rxInfo,proto3" json:"rx_info,omitempty"`
 	// LoRaWAN PHYPayload.
-	PhyPayloadJson       string   `protobuf:"bytes,3,opt,name=phy_payload_json,json=phyPayloadJSON,proto3" json:"phy_payload_json,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
+	PhyPayloadJson string `protobuf:"bytes,3,opt,name=phy_payload_json,json=phyPayloadJSON,proto3" json:"phy_payload_json,omitempty"`
+	// Published at timestamp.
+	PublishedAt          *timestamp.Timestamp `protobuf:"bytes,4,opt,name=published_at,json=publishedAt,proto3" json:"published_at,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}             `json:"-"`
+	XXX_unrecognized     []byte               `json:"-"`
+	XXX_sizecache        int32                `json:"-"`
 }
 
 func (m *UplinkFrameLog) Reset()         { *m = UplinkFrameLog{} }
@@ -107,16 +109,25 @@ func (m *UplinkFrameLog) GetPhyPayloadJson() string {
 	return ""
 }
 
+func (m *UplinkFrameLog) GetPublishedAt() *timestamp.Timestamp {
+	if m != nil {
+		return m.PublishedAt
+	}
+	return nil
+}
+
 type DownlinkFrameLog struct {
 	// TX information of the downlink.
 	TxInfo *gw.DownlinkTXInfo `protobuf:"bytes,1,opt,name=tx_info,json=txInfo,proto3" json:"tx_info,omitempty"`
 	// LoRaWAN PHYPayload.
 	PhyPayloadJson string `protobuf:"bytes,2,opt,name=phy_payload_json,json=phyPayloadJSON,proto3" json:"phy_payload_json,omitempty"`
 	// Gateway ID.
-	GatewayId            string   `protobuf:"bytes,3,opt,name=gateway_id,json=gatewayID,proto3" json:"gateway_id,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
+	GatewayId string `protobuf:"bytes,3,opt,name=gateway_id,json=gatewayID,proto3" json:"gateway_id,omitempty"`
+	// Published at timestamp.
+	PublishedAt          *timestamp.Timestamp `protobuf:"bytes,4,opt,name=published_at,json=publishedAt,proto3" json:"published_at,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}             `json:"-"`
+	XXX_unrecognized     []byte               `json:"-"`
+	XXX_sizecache        int32                `json:"-"`
 }
 
 func (m *DownlinkFrameLog) Reset()         { *m = DownlinkFrameLog{} }
@@ -165,6 +176,13 @@ func (m *DownlinkFrameLog) GetGatewayId() string {
 	return ""
 }
 
+func (m *DownlinkFrameLog) GetPublishedAt() *timestamp.Timestamp {
+	if m != nil {
+		return m.PublishedAt
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterEnum("api.RXWindow", RXWindow_name, RXWindow_value)
 	proto.RegisterType((*UplinkFrameLog)(nil), "api.UplinkFrameLog")
@@ -176,28 +194,30 @@ func init() {
 }
 
 var fileDescriptor_d215818867a60801 = []byte{
-	// 357 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x92, 0x4f, 0xcf, 0xd2, 0x40,
-	0x10, 0xc6, 0x2d, 0x4d, 0x40, 0x96, 0x48, 0x9a, 0x7a, 0x21, 0x44, 0x11, 0x39, 0xa1, 0xc6, 0xdd,
-	0x08, 0x07, 0xef, 0x84, 0x98, 0x60, 0x8c, 0x92, 0xaa, 0x91, 0x78, 0x69, 0xa6, 0xff, 0xb6, 0x2b,
-	0xed, 0xce, 0x66, 0xbb, 0x58, 0xfa, 0x0d, 0x3c, 0xfa, 0x91, 0xdf, 0x94, 0x96, 0xbc, 0xa1, 0xe1,
-	0x34, 0x9d, 0xa7, 0xbf, 0xec, 0xf3, 0xec, 0xce, 0x90, 0x19, 0x14, 0x2c, 0x3e, 0x9b, 0x58, 0x4b,
-	0xc8, 0x18, 0x28, 0xc1, 0x12, 0x0d, 0x79, 0xfc, 0x05, 0x39, 0x55, 0x1a, 0x0d, 0xba, 0x36, 0x28,
-	0x31, 0x7d, 0xc5, 0x11, 0x79, 0x16, 0xb3, 0x8b, 0x14, 0x9c, 0x12, 0x66, 0x44, 0x1e, 0x17, 0x06,
-	0x72, 0xd5, 0x50, 0xd3, 0x59, 0x17, 0x88, 0x4e, 0x1a, 0x8c, 0x40, 0xd9, 0xfe, 0x7f, 0x1e, 0x62,
-	0x9e, 0xa3, 0x64, 0x4d, 0x69, 0xc5, 0x11, 0x2f, 0x19, 0x2f, 0x9b, 0x66, 0xf1, 0xdf, 0x22, 0xe3,
-	0x9f, 0x2a, 0x13, 0xf2, 0xf8, 0xa9, 0x0d, 0xe0, 0xbe, 0x21, 0x03, 0x73, 0xf6, 0x85, 0x4c, 0x70,
-	0x62, 0xcd, 0xad, 0xe5, 0x68, 0xe5, 0x50, 0x5e, 0xd2, 0x06, 0xfa, 0x71, 0xd8, 0xc9, 0x04, 0xbd,
-	0xbe, 0x39, 0xd7, 0xb5, 0x46, 0x75, 0x8b, 0xf6, 0xe6, 0xf6, 0x2d, 0xea, 0xb5, 0xa8, 0x6e, 0xd0,
-	0x25, 0x71, 0x54, 0x5a, 0xf9, 0x0a, 0xaa, 0x0c, 0x21, 0xf2, 0xff, 0x14, 0x28, 0x27, 0xf6, 0xdc,
-	0x5a, 0x0e, 0xbd, 0xb1, 0x4a, 0xab, 0x7d, 0x23, 0x7f, 0xfe, 0xfe, 0xed, 0xeb, 0xe2, 0x9f, 0x45,
-	0x9c, 0x2d, 0x96, 0xf2, 0x26, 0xd4, 0xbb, 0x6e, 0x28, 0xb7, 0x76, 0xba, 0x62, 0x9d, 0x58, 0xf7,
-	0xbc, 0x7a, 0xf7, 0xbc, 0xdc, 0x97, 0x84, 0x70, 0x30, 0x71, 0x09, 0x95, 0x2f, 0xa2, 0x36, 0xcf,
-	0xb0, 0x55, 0x76, 0xdb, 0xb7, 0x2f, 0xc8, 0x53, 0xef, 0xf0, 0x4b, 0xc8, 0x08, 0x4b, 0x77, 0x40,
-	0x6c, 0xef, 0xf0, 0xc1, 0x79, 0xd2, 0x7c, 0xac, 0x1c, 0x6b, 0x93, 0x93, 0xd7, 0x02, 0x69, 0x98,
-	0x0a, 0xad, 0x0a, 0x03, 0xe1, 0x91, 0x82, 0x12, 0x14, 0x0a, 0x7a, 0x9d, 0x6b, 0xdd, 0x6f, 0x9e,
-	0x5d, 0xaf, 0xb0, 0xaf, 0xdf, 0x7b, 0x6f, 0xfd, 0xfe, 0xc8, 0x85, 0x49, 0x4f, 0x01, 0x0d, 0x31,
-	0x67, 0x81, 0xc6, 0x10, 0x40, 0xb3, 0xc7, 0x33, 0xde, 0xd7, 0xbb, 0xc0, 0x91, 0xfd, 0x5d, 0xb3,
-	0xce, 0x86, 0x04, 0xfd, 0xcb, 0xc4, 0xd6, 0x0f, 0x01, 0x00, 0x00, 0xff, 0xff, 0x13, 0x77, 0xdb,
-	0x16, 0x3b, 0x02, 0x00, 0x00,
+	// 395 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x92, 0x4f, 0x6f, 0xd4, 0x30,
+	0x10, 0xc5, 0x49, 0x83, 0x5a, 0xea, 0x85, 0x2a, 0x0a, 0x97, 0xd5, 0x0a, 0xca, 0xd2, 0xd3, 0x02,
+	0xc2, 0x16, 0xed, 0x81, 0x13, 0x07, 0xaa, 0x0a, 0xa9, 0x08, 0xc1, 0x2a, 0x2c, 0x62, 0xc5, 0x25,
+	0x9a, 0xfc, 0x73, 0xcc, 0x26, 0x1e, 0xcb, 0x71, 0xc8, 0xe6, 0x13, 0x72, 0xe4, 0x2b, 0xa1, 0xac,
+	0x13, 0xd0, 0x46, 0x7b, 0xeb, 0x69, 0x3c, 0xcf, 0x3f, 0xd9, 0xef, 0x8d, 0x86, 0x9c, 0x43, 0xc5,
+	0xd2, 0xad, 0x49, 0xb5, 0x84, 0x82, 0x81, 0x12, 0x2c, 0xd3, 0x50, 0xa6, 0x9f, 0x90, 0x53, 0xa5,
+	0xd1, 0xa0, 0xef, 0x82, 0x12, 0xb3, 0x67, 0x1c, 0x91, 0x17, 0x29, 0xdb, 0x49, 0x51, 0x9d, 0x31,
+	0x23, 0xca, 0xb4, 0x32, 0x50, 0x2a, 0x4b, 0xcd, 0xce, 0xc7, 0x40, 0x52, 0x6b, 0x30, 0x02, 0x65,
+	0x7f, 0xff, 0x38, 0xc6, 0xb2, 0x44, 0xc9, 0x6c, 0xe9, 0xc5, 0x09, 0x6f, 0x18, 0x6f, 0x6c, 0x73,
+	0xf1, 0xc7, 0x21, 0x67, 0xdf, 0x54, 0x21, 0xe4, 0xe6, 0x43, 0x6f, 0xc0, 0x7f, 0x41, 0x4e, 0xcc,
+	0x36, 0x14, 0x32, 0xc3, 0xa9, 0x33, 0x77, 0x16, 0x93, 0x4b, 0x8f, 0xf2, 0x86, 0x5a, 0x68, 0xb5,
+	0xbe, 0x95, 0x19, 0x06, 0xc7, 0x66, 0xdb, 0xd5, 0x0e, 0xd5, 0x3d, 0x7a, 0x34, 0x77, 0xf7, 0xd1,
+	0xa0, 0x47, 0xb5, 0x45, 0x17, 0xc4, 0x53, 0x79, 0x1b, 0x2a, 0x68, 0x0b, 0x84, 0x24, 0xfc, 0x59,
+	0xa1, 0x9c, 0xba, 0x73, 0x67, 0x71, 0x1a, 0x9c, 0xa9, 0xbc, 0x5d, 0x5a, 0xf9, 0xe3, 0xd7, 0x2f,
+	0x9f, 0xfd, 0x77, 0xe4, 0xa1, 0xaa, 0xa3, 0x42, 0x54, 0x79, 0x9a, 0x84, 0x60, 0xa6, 0xf7, 0x77,
+	0x26, 0x66, 0xd4, 0x66, 0xa5, 0x43, 0x56, 0xba, 0x1a, 0x86, 0x11, 0x4c, 0xfe, 0xf1, 0xef, 0xcd,
+	0xc5, 0x6f, 0x87, 0x78, 0x37, 0xd8, 0xc8, 0xbd, 0x4c, 0xaf, 0xc6, 0x99, 0xfc, 0xce, 0xe8, 0x80,
+	0x8d, 0x52, 0x1d, 0xb2, 0x7a, 0x74, 0xd0, 0xea, 0x53, 0x42, 0x38, 0x98, 0xb4, 0x81, 0x36, 0x14,
+	0x49, 0x1f, 0xe7, 0xb4, 0x57, 0x6e, 0x6f, 0xee, 0x98, 0xe4, 0xe5, 0x13, 0xf2, 0x20, 0x58, 0x7f,
+	0x17, 0x32, 0xc1, 0xc6, 0x3f, 0x21, 0x6e, 0xb0, 0x7e, 0xe3, 0xdd, 0xb3, 0x87, 0x4b, 0xcf, 0xb9,
+	0x2e, 0xc9, 0x73, 0x81, 0x34, 0xce, 0x85, 0x56, 0x95, 0x81, 0x78, 0x43, 0x41, 0x09, 0x0a, 0x15,
+	0x1d, 0xb6, 0xaa, 0xeb, 0xaf, 0x1f, 0x0d, 0x13, 0x58, 0x76, 0x7f, 0x2d, 0x9d, 0x1f, 0x6f, 0xb9,
+	0x30, 0x79, 0x1d, 0xd1, 0x18, 0x4b, 0x16, 0x69, 0x8c, 0x01, 0x34, 0xfb, 0xff, 0xc6, 0xeb, 0x6e,
+	0x13, 0x39, 0xb2, 0x5f, 0x57, 0x6c, 0xb4, 0x9f, 0xd1, 0xf1, 0xce, 0xed, 0xd5, 0xdf, 0x00, 0x00,
+	0x00, 0xff, 0xff, 0x05, 0xea, 0xc0, 0x2c, 0xb9, 0x02, 0x00, 0x00,
 }
