# swagger/as/external/api/gateway.swagger.json
@@ -326,6 +326,11 @@
         "gatewayID": {
           "type": "string",
           "description": "Gateway ID."
+        },
+        "publishedAt": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Published at timestamp."
         }
       }
     },
@@ -671,6 +676,11 @@
         "phyPayloadJSON": {
           "type": "string",
           "description": "LoRaWAN PHYPayload."
+        },
+        "publishedAt": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Published at timestamp."
         }
       }
     },
